[tool.poetry]
name = "holy-ghost-api"
version = "0.1.0"
description = ""
authors = ["samuel adekoya"]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.3.16"
alembic = "^1.5.4"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
