[tool.poetry]
name = "holy-ghost-api"
version = "0.1.0"
description = ""
authors = ["samuel adekoya"]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
sqlalchemy = "^1.3.16"
alembic = "^1.5.4"
pydantic = "^1.7.3"
psycopg2 = "^2.8.6"
PyJWT = "^2.0.1"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
